Archive2/41/4d078cdcc23618/output
main.cpp: In instantiation of 'class std::hash<quux>':
main.cpp:21:18:   required from here
main.cpp:5:76: error: no type named 'type' in 'struct std::enable_if<false, quux>'
     using sfinae = typename std::enable_if<std::is_enum<E>::value, E>::type;
                                                                            ^
main.cpp: In function 'int main()':
main.cpp:18:17: warning: unused variable 'foo_hash' [-Wunused-variable]
   std::hash<foo>foo_hash;
                 ^
main.cpp:21:18: warning: unused variable 'quux_hash' [-Wunused-variable]
   std::hash<quux>quux_hash;
                  ^
